B&L QA/objects/Physician_Visit__c.object
<CustomObject>
    <fields>
        <fullName>Key_Drivers_2__c</fullName>
        <description>IndiaSU field to collect Key driver products</description>
        <label>Key Driver 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LI61 AO</fullName>
                </value>
                <value>
                    <fullName>LI61AOV</fullName>
                </value>
                <value>
                    <fullName>LI61 SE</fullName>
                </value>
                <value>
                    <fullName>AKREOS</fullName>
                </value>
                <value>
                    <fullName>AKREOS AO</fullName>
                </value>
                <value>
                    <fullName>AKREOS MIL</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Spares &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Akreos AO Micro Incision Lens</fullName>
                </value>
                <value>
                    <fullName>Akreos Advanced Optics Aspheric Lens</fullName>
                </value>
                <value>
                    <fullName>Akreos Adapt Acrylic Lens</fullName>
                </value>
                <value>
                    <fullName>Silicone LI61AOR Advanced Optics</fullName>
                </value>
                <value>
                    <fullName>Silicone LI61SE Square Edge</fullName>
                </value>
                <value>
                    <fullName>Stellaris Vision Enhancement System</fullName>
                </value>
                <value>
                    <fullName>Envista</fullName>
                </value>
                <value>
                    <fullName>Stellaris/PC</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Drivers_3__c</fullName>
        <description>IndiaSU field to collect Key driver products</description>
        <label>Key Driver 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LI61 AO</fullName>
                </value>
                <value>
                    <fullName>LI61AOV</fullName>
                </value>
                <value>
                    <fullName>LI61 SE</fullName>
                </value>
                <value>
                    <fullName>AKREOS</fullName>
                </value>
                <value>
                    <fullName>AKREOS AO</fullName>
                </value>
                <value>
                    <fullName>AKREOS MIL</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Spares &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Akreos AO Micro Incision Lens</fullName>
                </value>
                <value>
                    <fullName>Akreos Advanced Optics Aspheric Lens</fullName>
                </value>
                <value>
                    <fullName>Akreos Adapt Acrylic Lens</fullName>
                </value>
                <value>
                    <fullName>Silicone LI61AOR Advanced Optics</fullName>
                </value>
                <value>
                    <fullName>Silicone LI61SE Square Edge</fullName>
                </value>
                <value>
                    <fullName>Stellaris Vision Enhancement System</fullName>
                </value>
                <value>
                    <fullName>Envista</fullName>
                </value>
                <value>
                    <fullName>Stellaris/PC</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Message_1_CHN__c</fullName>
        <label>Key Message 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Key_Driver_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Delivers Benefits of 1.8 mm incision</fullName>
                </value>
                <value>
                    <fullName>Exceptional Vision Quality</fullName>
                </value>
                <value>
                    <fullName>A Proven Track Record Material &amp; Design</fullName>
                </value>
                <value>
                    <fullName>The Akreos AO Lens delivers exceptional vision quality and contrast sensitivity with an aberration-free design</fullName>
                </value>
                <value>
                    <fullName>Innovative design improves clinical outcomes</fullName>
                </value>
                <value>
                    <fullName>Efficient Lens Delivery</fullName>
                </value>
                <value>
                    <fullName>Building On A Proven Track Record</fullName>
                </value>
                <value>
                    <fullName>Biomaterial: Low PCO rate</fullName>
                </value>
                <value>
                    <fullName>Biodesign/Biogeometry: Capsule friendly</fullName>
                </value>
                <value>
                    <fullName>Bioconstruction: Square edge, anti-glare technologies</fullName>
                </value>
                <value>
                    <fullName>Biostability: Clinical and optically stable</fullName>
                </value>
                <value>
                    <fullName>Biomechanics: Foldability, ease of delivery with various implantation techniques</fullName>
                </value>
                <value>
                    <fullName>SofPort AO is an aberration-free aspheric lens for superior vision</fullName>
                </value>
                <value>
                    <fullName>Aberration-free design means no aberrations induced with decentration</fullName>
                </value>
                <value>
                    <fullName>Single-handed, planar delivery of the lens with the fully disposable Easy Load inserter through an unenlarged 2.8-mm phaco incision</fullName>
                </value>
                <value>
                    <fullName>Easy to use for surgeon and staff</fullName>
                </value>
                <value>
                    <fullName>Intelligent IOL technology - 360° posterior square edge; No sloping edge-related glare</fullName>
                </value>
                <value>
                    <fullName>Sub-3 mm insertion</fullName>
                </value>
                <value>
                    <fullName>Planar delivery in the bag</fullName>
                </value>
                <value>
                    <fullName>Total control for surgeon</fullName>
                </value>
                <value>
                    <fullName>Clinical Advantages of 1.8mm MICS</fullName>
                </value>
                <value>
                    <fullName>Stable Chamber Fluidics</fullName>
                </value>
                <value>
                    <fullName>Attune Energy Management System delivering efficient cataract removal with minimal energy</fullName>
                </value>
                <value>
                    <fullName>Ease of Use</fullName>
                </value>
                <value>
                    <fullName>First Time Introduction</fullName>
                </value>
                <value>
                    <fullName>Advanced Fluidics, Cutting and Visualization Technology</fullName>
                </value>
                <value>
                    <fullName>Procedural Flexibility in 1 Integrated System ( Phaco &amp; VR Capabilities )</fullName>
                </value>
                <value>
                    <fullName>Forward thinking design and a footprint that is intuitive</fullName>
                </value>
                <value>
                    <fullName>No Glistenings Observed, Abrasion resistance &amp; Controlled Unfolding</fullName>
                </value>
                <value>
                    <fullName>Wound assisted technology with 2.2mm incision size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Message_1__c</fullName>
        <description>IndiaSU field to collect Key message for key driver 1</description>
        <label>Key Message 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_2_CHN__c</fullName>
        <label>Key Message 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Key_Drivers_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Delivers Benefits of 1.8 mm incision</fullName>
                </value>
                <value>
                    <fullName>Exceptional Vision Quality</fullName>
                </value>
                <value>
                    <fullName>A Proven Track Record Material &amp; Design</fullName>
                </value>
                <value>
                    <fullName>The Akreos AO Lens delivers exceptional vision quality and contrast sensitivity with an aberration-free design</fullName>
                </value>
                <value>
                    <fullName>Innovative design improves clinical outcomes</fullName>
                </value>
                <value>
                    <fullName>Efficient Lens Delivery</fullName>
                </value>
                <value>
                    <fullName>Building On A Proven Track Record</fullName>
                </value>
                <value>
                    <fullName>Biomaterial: Low PCO rate</fullName>
                </value>
                <value>
                    <fullName>Biodesign/Biogeometry: Capsule friendly</fullName>
                </value>
                <value>
                    <fullName>Bioconstruction: Square edge, anti-glare technologies</fullName>
                </value>
                <value>
                    <fullName>Biostability: Clinical and optically stable</fullName>
                </value>
                <value>
                    <fullName>Biomechanics: Foldability, ease of delivery with various implantation techniques</fullName>
                </value>
                <value>
                    <fullName>SofPort AO is an aberration-free aspheric lens for superior vision</fullName>
                </value>
                <value>
                    <fullName>Aberration-free design means no aberrations induced with decentration</fullName>
                </value>
                <value>
                    <fullName>Single-handed, planar delivery of the lens with the fully disposable Easy Load inserter through an unenlarged 2.8-mm phaco incision</fullName>
                </value>
                <value>
                    <fullName>Easy to use for surgeon and staff</fullName>
                </value>
                <value>
                    <fullName>Intelligent IOL technology - 360° posterior square edge; No sloping edge-related glare</fullName>
                </value>
                <value>
                    <fullName>Sub-3 mm insertion</fullName>
                </value>
                <value>
                    <fullName>Planar delivery in the bag</fullName>
                </value>
                <value>
                    <fullName>Total control for surgeon</fullName>
                </value>
                <value>
                    <fullName>Clinical Advantages of 1.8mm MICS</fullName>
                </value>
                <value>
                    <fullName>Stable Chamber Fluidics</fullName>
                </value>
                <value>
                    <fullName>Attune Energy Management System delivering efficient cataract removal with minimal energy</fullName>
                </value>
                <value>
                    <fullName>Ease of Use</fullName>
                </value>
                <value>
                    <fullName>First Time Introduction</fullName>
                </value>
                <value>
                    <fullName>Advanced Fluidics, Cutting and Visualization Technology</fullName>
                </value>
                <value>
                    <fullName>Procedural Flexibility in 1 Integrated System ( Phaco &amp; VR Capabilities )</fullName>
                </value>
                <value>
                    <fullName>Forward thinking design and a footprint that is intuitive</fullName>
                </value>
                <value>
                    <fullName>No Glistenings Observed, Abrasion resistance &amp; Controlled Unfolding</fullName>
                </value>
                <value>
                    <fullName>Wound assisted technology with 2.2mm incision size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Message_2__c</fullName>
        <description>IndiaSU field to collect Key message for key driver 2</description>
        <label>Key Message 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_3_CHN__c</fullName>
        <label>Key Message 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Key_Drivers_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Delivers Benefits of 1.8 mm incision</fullName>
                </value>
                <value>
                    <fullName>Exceptional Vision Quality</fullName>
                </value>
                <value>
                    <fullName>A Proven Track Record Material &amp; Design</fullName>
                </value>
                <value>
                    <fullName>The Akreos AO Lens delivers exceptional vision quality and contrast sensitivity with an aberration-free design</fullName>
                </value>
                <value>
                    <fullName>Innovative design improves clinical outcomes</fullName>
                </value>
                <value>
                    <fullName>Efficient Lens Delivery</fullName>
                </value>
                <value>
                    <fullName>Building On A Proven Track Record</fullName>
                </value>
                <value>
                    <fullName>Biomaterial: Low PCO rate</fullName>
                </value>
                <value>
                    <fullName>Biodesign/Biogeometry: Capsule friendly</fullName>
                </value>
                <value>
                    <fullName>Bioconstruction: Square edge, anti-glare technologies</fullName>
                </value>
                <value>
                    <fullName>Biostability: Clinical and optically stable</fullName>
                </value>
                <value>
                    <fullName>Biomechanics: Foldability, ease of delivery with various implantation techniques</fullName>
                </value>
                <value>
                    <fullName>SofPort AO is an aberration-free aspheric lens for superior vision</fullName>
                </value>
                <value>
                    <fullName>Aberration-free design means no aberrations induced with decentration</fullName>
                </value>
                <value>
                    <fullName>Single-handed, planar delivery of the lens with the fully disposable Easy Load inserter through an unenlarged 2.8-mm phaco incision</fullName>
                </value>
                <value>
                    <fullName>Easy to use for surgeon and staff</fullName>
                </value>
                <value>
                    <fullName>Intelligent IOL technology - 360° posterior square edge; No sloping edge-related glare</fullName>
                </value>
                <value>
                    <fullName>Sub-3 mm insertion</fullName>
                </value>
                <value>
                    <fullName>Planar delivery in the bag</fullName>
                </value>
                <value>
                    <fullName>Total control for surgeon</fullName>
                </value>
                <value>
                    <fullName>Clinical Advantages of 1.8mm MICS</fullName>
                </value>
                <value>
                    <fullName>Stable Chamber Fluidics</fullName>
                </value>
                <value>
                    <fullName>Attune Energy Management System delivering efficient cataract removal with minimal energy</fullName>
                </value>
                <value>
                    <fullName>Ease of Use</fullName>
                </value>
                <value>
                    <fullName>First Time Introduction</fullName>
                </value>
                <value>
                    <fullName>Moderate refractive index with low surface reflectivity reduces glares</fullName>
                </value>
                <value>
                    <fullName>Advanced Optics Technology</fullName>
                </value>
                <value>
                    <fullName>Stellaris delivers performance at any incision size</fullName>
                </value>
                <value>
                    <fullName>Advanced Fluidics, Cutting and Visualization Technology</fullName>
                </value>
                <value>
                    <fullName>Procedural Flexibility in 1 Integrated System ( Phaco &amp; VR Capabilities )</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Message_3__c</fullName>
        <description>IndiaSU field to collect Key message for key driver 3</description>
        <label>Key Message 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI61AOV__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>LI61AOV</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61_AO__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>LI61 AO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61_SE__c</fullName>
        <description>IndiaSU field to collect B&amp;L Implantation product detail (No of IOL&apos;s)</description>
        <label>LI61 SE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Activity</label>
        <referenceTo>Physician_Visit__c</referenceTo>
        <relationshipLabel>Last Activity</relationshipLabel>
        <relationshipName>Physician_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lens_usage_for_the_Week_IND__c</fullName>
        <description>If &quot;Active User&quot; is &quot;Yes&quot;, &quot;Lens usage for the month&quot; cannot be left Blank.</description>
        <inlineHelpText>If &quot;Active User&quot; is &quot;Yes&quot;, &quot;Lens usage for the month&quot; cannot be left Blank.</inlineHelpText>
        <label>Lens usage for the Week (IND)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Installation_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect whether machine installation/application</description>
        <label>Machine Installation/ Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Materials_Used_1__c</fullName>
        <label>Materials Used 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Used_2__c</fullName>
        <label>Materials Used 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Used_3__c</fullName>
        <label>Materials Used 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Outcome_1__c</fullName>
        <label>Meeting Outcome 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Outcome_2__c</fullName>
        <label>Meeting Outcome 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Outcome_3__c</fullName>
        <label>Meeting Outcome 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_with_beauty_consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Meeting with beauty consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_with_chief_doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Meeting with chief doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_with_marketing_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Meeting with marketing staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_with_paid_doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Meeting with paid doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Machine_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect Number of new machine installed</description>
        <label>New Machine Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Service_Contracts_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect details of new service contract</description>
        <label>New Service Contracts Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_Service_Products__c</fullName>
        <description>APAC CHNSU field:Count the number of Physician Visit&apos;s Service Products for Validation</description>
        <label>Num of Service Products</label>
        <summaryForeignKey>Service_Product__c.Physician_Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OT_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>India OT Hours capture from Visulaforce Page</description>
        <label>OT Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Payment_Basis__c</fullName>
        <description>IndiaSU field to collect whether visit is on payment basis</description>
        <label>On Payment Basis</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Depend on whether  it is a onsite service.</description>
        <label>Onsite Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Brand_Name__c</fullName>
        <description>India SU field to collect other competitor brand name.</description>
        <label>Other Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Brands_Rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Other Brands Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Others_Please_Enter__c</fullName>
        <label>Others (Please Enter)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Others</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome_1__c</fullName>
        <label>Outcome 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Agree to try</fullName>
                </value>
                <value>
                    <fullName>Agree to increase product usage</fullName>
                </value>
                <value>
                    <fullName>Accept product benefit</fullName>
                </value>
                <value>
                    <fullName>Agreee to further consider</fullName>
                </value>
                <value>
                    <fullName>doubt/negate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_2__c</fullName>
        <label>Outcome 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree to try</fullName>
                </value>
                <value>
                    <fullName>Agree to increase product usage</fullName>
                </value>
                <value>
                    <fullName>Accept product benefit</fullName>
                </value>
                <value>
                    <fullName>Agreee to further consider</fullName>
                </value>
                <value>
                    <fullName>doubt/negate</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_3__c</fullName>
        <label>Outcome 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree to try</fullName>
                </value>
                <value>
                    <fullName>Agree to increase product usage</fullName>
                </value>
                <value>
                    <fullName>Accept product benefit</fullName>
                </value>
                <value>
                    <fullName>Agreee to further consider</fullName>
                </value>
                <value>
                    <fullName>doubt/negate</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Service_Visits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect whether its a paid service</description>
        <label>Paid Service Visits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Phone call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_City__c</fullName>
        <description>Set the &quot;Mailing City&apos; of Physician for Indian Doctors (To display in &quot;Calls Reported&quot; report)</description>
        <formula>Physician__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <formula>Physician__r.FirstName+ Physician__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IndiaSU field to collect physician from activity</description>
        <label>Physician</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Physician Visit</relationshipLabel>
        <relationshipName>Physician_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Visit__c</fullName>
        <formula>IF(OR(ISNULL(Last_Activity__c),ISBLANK(Last_Activity__c)),&apos;N/A&apos;,HYPERLINK(&apos;/&apos; +  Last_Activity__c ,Last_Activity__r.Name , &apos;_blank&apos;))</formula>
        <label>Previous Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Clinical_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for KOR SOLTA Users.</description>
        <label>Procedure/Clinical Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_1__c</fullName>
        <description>India Product 1 capture from Visualforce Page</description>
        <label>Product 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2__c</fullName>
        <label>Product 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rayner__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Rayner</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReZoom__c</fullName>
        <description>APACSU field to Collect number of ReZoom</description>
        <label>ReZoom</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReZoom_rate__c</fullName>
        <description>APACSU field to collect ReZoom rate</description>
        <label>ReZoom rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks_1__c</fullName>
        <description>Remarks for Key Driver 1</description>
        <label>Remarks 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_2__c</fullName>
        <description>Remarks for Key Driver 2</description>
        <label>Remarks 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_3__c</fullName>
        <description>Remarks for Key Driver 3</description>
        <label>Remarks 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>IndiaSU field to collect general remarks of from the visit</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_No__c</fullName>
        <description>The Report Numer of Physician Visit.</description>
        <label>Report No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Time__c</fullName>
        <label>Reporting Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <description>INDSU field to populate segmentation of the account</description>
        <formula>Text(Account_Profile__r.Segmentation__c)</formula>
        <label>Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensar__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Sensar</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensar_rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Sensar rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>